230

- Remove broken uncaught exception handler from Bootstrap

229

- Strip trailing whitespace when redirecting standard output streams to log
- Add OpenTelemetry tracing module
- Add OpenTelemetry tracing to HTTP client
- Add OpenTelemetry tracing for JAX-RS
- Add OpenTelemetry trace context to JSON logging
- Add openmetrics and security-jwks to BOM
- Add getProperty method to AbstractConfigurationAwareModule
- Fix HTTP client request size statistic

228

- Exclude Hamcrest from jaxrs-testing

227

- Exclude jakarta.ws.rs-api from jaxrs

226

- Fix incorrect value reporting in sparse HLL
- Update to Airbase 134
- Update to Jetty 10.0.14
- Update to Jersey 2.39

225

- Upgrade to Slice 0.45
- Remove legacy logging implementation

224

- Add openmetrics module
- Add ByteBufferBodyGenerator for HTTP client

223

- Deprecate custom HTTP client BodyGenerator implementations
- Update to Jetty 10.0.13

222

- Update to Jetty 9.4.50.v20221201
- Use jetty-servlet-api instead of javax.servlet-api

221

- Fix hang in logger shutdown.

220

- Change target Java version to 17.
- Make CpuTimer user time collection optional.
- Add custom ticker support to CpuTimer.
- Add primitive methods to TDigest stats to avoid unnecessary boxing.
- Support configs bound with prefix in ConditionalModule.

219

- Report errors thrown from Guice modules during bootstraping together
  with errors from config validator.
- Update to Jetty 9.4.49.v20220914.
- Upgrade to Airbase 130.
- Upgrade to JOL 0.16 in stats.

218

- Add method add(value, count) to the DistributionStat.
- Update to Byte Buddy 1.12.13.

217

- Auto detect records for Jackson serialization

216

- Remove dbpool module.
- Trim whitespace when loading configuration of log levels.
- Support Jersey programmatic resources.
- Add SwitchModule.
- Add AsyncSemaphore.processAll() method.
- Regenerate testing certificates using secure crypto algorithms.

215

- Upgrade to MySQL Connector/J 8.0.22 in dbpool.