@@ -1,6 +1,7 @@
 230
 
 - Remove broken uncaught exception handler from Bootstrap
+- Expose cache load count in JMX cache stats
 
 229
 
